<?xml version="1.0"?>
<package format="3">
  <name>robot_localization_tests</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="smk.robotics@gmail.com">Kirill Smirnov</maintainer>
  <license>THE BEER-WARE LICENSE</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
